--- a/electron/src/css/practice-rom-patcher.css
+++ b/electron/src/css/practice-rom-patcher.css
@@ -13,3 +13,11 @@
   padding-top: 10px;
   margin-bottom: 4px;
 }
+
+.colorpicker-row {
+  padding-right: 15px;
+}
+
+#patch-button {
+  width: 100%;
+}
