--- a/src/css/practice-rom-patcher.css
+++ b/src/css/practice-rom-patcher.css
@@ -48,3 +48,15 @@
 #patch-button {
   width: 100%;
 }
+
+/* no text selection or focus highlighting */
+:not(input):not(textarea),
+:not(input):not(textarea)::after,
+:not(input):not(textarea)::before {
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+input, button, textarea, :focus {
+    outline: none; // You should add some other style for :focus to help UX/a11y
+}
